error.txt
(intel_cantera) [jsampayan4914@cpu038 reactorode_isat_nn]$ ./build.sh 
./build.sh: line 1: ﻿#!/bin/bash: No such file or directory
icpx: warning: -lcantera: 'linker' input unused [-Wunused-command-line-argument]
icpx: warning: argument unused during compilation: '-L/home/jsampayan4914/miniconda3/envs/intel_cantera/lib' [-Wunused-command-line-argument]
lreactor.cpp:396:17: error: no member named 'setSensitivityMethod' in 'Cantera::Integrator'
  396 |     integrator->setSensitivityMethod(CVODES_STAGGERED); //CVODES
      |     ~~~~~~~~~~~~^
reactor.cpp:396:38: error: use of undeclared identifier 'CVODES_STAGGERED'
  396 |     integrator->setSensitivityMethod(CVODES_STAGGERED); //CVODES
      |                                      ^
reactor.cpp:400:17: error: no member named 'setSensitivityParameters' in 'Cantera::Integrator'
  400 |     integrator->setSensitivityParameters(plist, pbar); //CVODES
      |     ~~~~~~~~~~~~^
3 errors generated.
ifx: error #10236: File not found: 'reactor.o'
(intel_cantera) [jsampayan4914@cpu038 reactorode_isat_nn]$ 

